--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .login {
     margin: 0;
     padding: 0;
-    background: url(pic1.jpg);
+    background: url(css/pic1.jpg);
     background-size: cover;
     background-position: center;
     font-family: sans-serif;
